Add new polimi logos alternate
Signed-off-by: Diego Rondelli <diego.rondelli@mail.polimi.it>

--- a/latex_source/frontespizio.tex
+++ b/latex_source/frontespizio.tex
@@ -9,7 +9,7 @@
   Corso di Laurea \textbf{MAGISTRALE} in Ingegneria Informatica\\
   \begin{figure}[htbp]
     \begin{center}
-      \includegraphics[width=3.5cm]{./pictures/frontesp/newlogopm1}
+      \includegraphics[width=5cm]{./pictures/frontesp/NewLogo.png}
 %	\psfig{file=./pictures/logopm.jpg,width=3.5cm}
     \end{center}
   \end{figure}
