--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -62,7 +62,7 @@
 \renewcommand{\headrulewidth}{0.3pt} 
 
 \pagenumbering{arabic}
-
+\include{abstract}
 \include{introduzione}
 \include{capitolo1}
 \include{capitolo2}
@@ -70,6 +70,7 @@
 \include{capitolo4}
 \include{capitolo5}
 \include{conclusioni}
+\include{ringraziamenti}
 
 \cleardoublepage
 
