--- a/latex_source/capitolo4.tex
+++ b/latex_source/capitolo4.tex
@@ -167,7 +167,7 @@ In LabVIEW un processo è rappresentato graficamente da un ciclo (\textit{loop})
 	\item \underline{Non Deterministici} (\textit{Non-deterministc loop/process}): processi \textit{Soft-deadline}. Sono rappresentati graficamente da While Loop (Figura \ref{whileloop}).
 \end{enumerate}
 
-\subsection{Progettazione e programmazione dell'FPGA}
+\subsection{Programmazione dell'FPGA}
 FPGA, ampiamente descritto nel Capitolo \ref{capitolo3}, è un dispositivo logico le cui funzionalità sono programmabili via software.
 
 Una delle tecniche più utilizzate per specificare la funzionalità di un dispositivo logico riprogrammabile consiste nell'uso di un linguaggio di descrizione dell'hardware (HDL, \textit{Hardware Description Language}). Esistono anche tecniche che utilizzano strumenti grafici (EDA, \textit{Electronic Design Automation}) per definire lo schema circuitale.
