--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -11,6 +11,7 @@
 \usepackage[scriptsize]{caption} 
 \usepackage{siunitx}
 \usepackage{gensymb}
+\usepackage{lmodern}
 \usepackage{multirow}
 \DeclareSIUnit{\EUR}{\text{\euro}}
 
@@ -61,6 +62,7 @@
 \renewcommand{\headrulewidth}{0.3pt} 
 
 \pagenumbering{arabic}
+\include{introduzione}
 \include{capitolo1}
 \include{capitolo2}
 \include{capitolo3}
