fix campana img cap 5

--- a/latex_source/capitolo5.tex
+++ b/latex_source/capitolo5.tex
@@ -572,8 +572,7 @@ Con lo scopo di mostrare i miglioramenti ottenuti dell'algoritmo di compensazion
 {\includegraphics[scale=.5]{cap5/fissomodliscioa}}
 \hspace{5mm}
 \subfigure[Distribuzione dei valori misurati rispetto alla media]
-%% TODO Cap5: Manca campana a questa misura
-{\includegraphics[scale=.1]{cap5/fissomodliscioa}}
+{\includegraphics[scale=.4]{cap5/fissomodlisciob}}
 \caption{Misure di distanza a bersaglio fisso con segnale di modulazione compensato e liscio}\label{fissomodliscio}
 \end{figure}
 
