--- a/latex_source/introduzione.tex
+++ b/latex_source/introduzione.tex
@@ -3,7 +3,7 @@
 \thispagestyle{empty}
 \addcontentsline{toc}{chapter}{Introduzione}
 
-Il lavoro di tesi qui presentato trae origine dall'esperienza svolta presso il "Laboratorio di Misure Ottiche ed Elettroniche - MOLES" del Dipartimento di Elettronica Informazione e Bioingegneria del Politecnico di Milano, nell'ambito dello studio e del progetto di un sistema di misura laser di distanza mediante tecnica interferometrica a retroiniezione. Lo strumento in questione deriva dalle conoscenze acquisite con un'attivit\'a di ricerca che si sviluppa da diversi anni~\cite{341714}.
+Il lavoro di tesi qui presentato trae origine dall'esperienza svolta presso il "Laboratorio di Misure Ottiche ed Elettroniche - MOLES" del Dipartimento di Elettronica Informazione e Bioingegneria (DEIB) del Politecnico di Milano, nell'ambito dello studio e del progetto di un sistema di misura laser di distanza mediante tecnica interferometrica a retroiniezione. Lo strumento in questione deriva dalle conoscenze acquisite con un'attivit\'a di ricerca che si sviluppa da diversi anni~\cite{341714}.
 
 Grazie alla scarsa invasivit\'a delle sorgenti laser e alla loro elevata adattabilit\'a ai vari ambienti di lavoro, il loro utilizzo \'e richiesto in numerose applicazioni, che spaziano dagli ambiti biomedicali alle telecomunicazioni, fino ad arrivare alla pura sensoristica. Sebbene nel mercato ci siano diverse tipologie di misuratori di distanza ottici, sfruttati grazie alla loro capacit\'a di misurazione senza perturbazioni o interventi meccanici, la tecnica interferometrica a retroiniezione consente caratteristiche e prestazioni differenti. \'E una tecnica recente che permette di effettuare una misura di distanza assoluta utilizzando solamente un laser, un fotodiodo e una lente. Il costo dei componenti \'e esiguo grazie alle tecnologie elettroniche analogiche e digitali moderne e alla semplicit\'a del sistema ottico.
 
